{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 15,
  "lineage": "b459b51a-6c2b-52b6-634a-5d44fe0959d6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az-trainings",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8391944-774c-41db-95d3-6797158258bc/resourceGroups/az-trainings-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-az-trainings",
            "location": "canadacentral",
            "name": "nsg-az-trainings",
            "resource_group_name": "az-trainings-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-trainings"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8391944-774c-41db-95d3-6797158258bc/resourceGroups/az-trainings-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-az-trainings/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-az-trainings",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "az-trainings-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.az-trainings",
            "azurerm_resource_group.az-trainings"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8391944-774c-41db-95d3-6797158258bc/resourceGroups/az-trainings-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-az-trainings/securityRules/allow-80",
            "name": "allow-80",
            "network_security_group_name": "nsg-az-trainings",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "az-trainings-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.az-trainings",
            "azurerm_resource_group.az-trainings"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8391944-774c-41db-95d3-6797158258bc/resourceGroups/az-trainings-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-az-trainings/securityRules/allow-8080",
            "name": "allow-8080",
            "network_security_group_name": "nsg-az-trainings",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "az-trainings-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.az-trainings",
            "azurerm_resource_group.az-trainings"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az-trainings",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f992f7c0-1bb9-42b0-83ec-6a8d505d1b21",
            "id": "/subscriptions/d8391944-774c-41db-95d3-6797158258bc/resourceGroups/az-trainings-rg/providers/Microsoft.Network/virtualNetworks/az-trainings-vnet",
            "location": "canadacentral",
            "name": "az-trainings-vnet",
            "resource_group_name": "az-trainings-rg"
          },
          "dependencies": [
            "azurerm_resource_group.az-trainings"
          ]
        }
      ]
    }
  ]
}